# NewsMaker

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  pyproject.toml
config/: blacklist.yaml  brand_domains.yaml  few_shots.yaml  http_quirks.yaml  primary_source_cues.yaml  sections.yaml  sources_overrides.yaml  sources_schema.yaml  whitelist_domains.yaml
scripts/: analyze_manual_review.py  analyze_published_news.py  analyze_source_health.py  append_claude_questions.py  apply_classifications.py  apply_sheet_formatting.py  backfill_dates.py  backfill_primary_source.py  batch_fetch_test.py  build_news_clusters.py  build_news_sheet.py  check_sheets.py  claude_verdicts_v4.py  cleanup_news_sheet.py  compare_llms.py  compare_versions.py  export_candidates.py  flag_suspect_titles.py  inspect_sheets.py  mark_user_answers.py  retry_failed_llm.py  smoke_blocked_sources.py  smoke_llm.py  smoke_sheets_access.py  smoke_telegram.py  write_rules_tab.py  write_stats_panel.py  write_uncertain_cases.py
scripts/fixtures/: eval_articles.json
src/news_agent/: __init__.py  __main__.py  logging_setup.py  settings.py
src/news_agent/adapters/: sheets.py  storage.py
src/news_agent/adapters/fetchers/: __init__.py  base.py  html.py  impersonate.py  playwright_fetch.py  playwright_fetcher.py  rss.py  telegram.py
src/news_agent/adapters/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py  pricing.py
src/news_agent/cli/: main.py
src/news_agent/core/: budget.py  config_loader.py  dedup.py  freshness.py  heuristic_relevance.py  models.py  primary_source.py  urls.py
src/news_agent/pipeline/: run.py
tests/: conftest.py  test_blacklist.py  test_budget.py  test_config_loader.py  test_date_extraction.py  test_dedup.py  test_freshness.py  test_heuristic_relevance.py  test_html_extraction.py  test_output_row.py  test_pipeline_integration.py  test_primary_source.py  test_telegram_fetcher.py  test_urls.py
tests/fixtures/: article_en.html  article_ru.html  telegram_channel.html
